[package]
name = "h2perf"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "h2perf-client"
path = "src/client.rs"

[[bin]]
name = "h2perf-server"
path = "src/server.rs"

[dependencies]
bytes = "1.9.0"
clap = { version = "4.5.26", features = ["derive"] }
h2 = "0.4.7"
http = "1.2.0"
rand = "0.8.5"
rand_xoshiro = "0.6.0"
tokio = { version = "1.43.0", features = ["full"] }
